<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:padding="2dp">

    <ImageView
        android:id="@+id/img_item_movie_poster"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img_dsc_movie_poster"
        android:scaleType="fitCenter"
        tools:src="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_item_movie_poster"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/tv_movie_score"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_movie_star"
            android:textSize="22sp"
            tools:text="@string/movie_score" />

        <TextView
            android:id="@+id/tv_movie_genre"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/movie_genre" />

        <TextView
            android:id="@+id/tv_movie_overview"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            tools:text="@string/movie_overview" />

    </LinearLayout>

</RelativeLayout>