<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MovieDetailActivity">

    <ImageView
        android:id="@+id/img_movie_backdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/rl_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_movie_poster"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/img_dsc_movie_poster"
            android:scaleType="fitCenter"
            tools:src="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_item_movie_poster"
            android:background="@color/colorPrimaryDarkTransparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_title"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="@string/movie_title" />

            <TextView
                android:id="@+id/tv_movie_score"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_movie_star"
                android:textSize="22sp"
                tools:text="@string/movie_score" />

            <TextView
                android:id="@+id/tv_movie_genre"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/movie_genre" />

            <TextView
                android:id="@+id/tv_movie_release_date"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/movie_release_date" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_movie_overview"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_movie_backdrop"
        android:padding="16dp"
        android:textSize="16sp"
        tools:text="@string/movie_overview" />

    <TextView
        android:id="@+id/tv_cast"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_overview"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_cast"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pb_cast_data"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tv_cast"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_cast"
        tools:listitem="@layout/item_row_cast" />

</RelativeLayout>